--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,20 @@
   <url>http://maven.apache.org</url>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.inmobi.pso</groupId>
+      <artifactId>PSOCommons</artifactId>
+      <version>2.29</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
