--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,19 @@
       <version>4.1.0</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>15.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>13.0</version>
+    </dependency>
+
+
   </dependencies>
 
 
