--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
       <artifactId>guava</artifactId>
       <version>13.0</version>
     </dependency>
+    <dependency>
+      <groupId>antlr</groupId>
+      <artifactId>antlr</artifactId>
+      <version>2.7.2</version>
+    </dependency>
 
 
   </dependencies>
