--- a/pom.xml
+++ b/pom.xml
@@ -42,22 +42,22 @@
       <version>2.0</version>
     </dependency>
 
-    <!-- Dependency for tesseract api, used for image recognition -->
-    <dependency>
-      <groupId>net.sourceforge.tess4j</groupId>
-      <artifactId>tess4j</artifactId>
-      <version>2.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.media</groupId>
-      <artifactId>jai_imageio</artifactId>
-      <version>1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>net.java.dev.jna</groupId>
-      <artifactId>jna</artifactId>
-      <version>4.1.0</version>
-    </dependency>
+    <!--&lt;!&ndash; Dependency for tesseract api, used for image recognition &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>net.sourceforge.tess4j</groupId>-->
+      <!--<artifactId>tess4j</artifactId>-->
+      <!--<version>2.0.0</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>com.sun.media</groupId>-->
+      <!--<artifactId>jai_imageio</artifactId>-->
+      <!--<version>1.1</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>net.java.dev.jna</groupId>-->
+      <!--<artifactId>jna</artifactId>-->
+      <!--<version>4.1.0</version>-->
+    <!--</dependency>-->
 
 
     <dependency>
