--- a/pom.xml
+++ b/pom.xml
@@ -1,135 +1,149 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.muks</groupId>
-  <artifactId>ljp</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.muks</groupId>
+    <artifactId>ljp</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
 
-  <name>ljp</name>
-  <url>http://maven.apache.org</url>
+    <name>ljp</name>
+    <url>http://maven.apache.org</url>
 
-  <dependencies>
-    <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
-      <version>1.1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>com.inmobi.pso</groupId>
-      <artifactId>PSOCommons</artifactId>
-      <version>2.29</version>
-    </dependency>
+    <dependencies>
 
-    <dependency>
-      <groupId>commons-cli</groupId>
-      <artifactId>commons-cli</artifactId>
-      <version>1.3.1</version>
-    </dependency>
+        <!-- Javax - JMS for using in-conjunction with ActiveMQ -->
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>jms</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.13.2</version>
+        </dependency>
 
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.inmobi.pso</groupId>
+            <artifactId>PSOCommons</artifactId>
+            <version>2.29</version>
+        </dependency>
 
-    <!-- Dependency for Google's v8 javascript execution engine -->
-    <dependency>
-      <groupId>com.eclipsesource.j2v8</groupId>
-      <artifactId>j2v8_macosx_x86_64</artifactId>
-      <version>2.0</version>
-    </dependency>
-
-    <!--&lt;!&ndash; Dependency for tesseract api, used for image recognition &ndash;&gt;-->
-    <!--<dependency>-->
-      <!--<groupId>net.sourceforge.tess4j</groupId>-->
-      <!--<artifactId>tess4j</artifactId>-->
-      <!--<version>2.0.0</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>com.sun.media</groupId>-->
-      <!--<artifactId>jai_imageio</artifactId>-->
-      <!--<version>1.1</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>net.java.dev.jna</groupId>-->
-      <!--<artifactId>jna</artifactId>-->
-      <!--<version>4.1.0</version>-->
-    <!--</dependency>-->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 
 
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>15.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>13.0</version>
-    </dependency>
-    <dependency>
-      <groupId>antlr</groupId>
-      <artifactId>antlr</artifactId>
-      <version>2.7.2</version>
-    </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>3.8.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Dependency for Google's v8 javascript execution engine -->
+        <dependency>
+            <groupId>com.eclipsesource.j2v8</groupId>
+            <artifactId>j2v8_macosx_x86_64</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <!--&lt;!&ndash; Dependency for tesseract api, used for image recognition &ndash;&gt;-->
+        <!--<dependency>-->
+        <!--<groupId>net.sourceforge.tess4j</groupId>-->
+        <!--<artifactId>tess4j</artifactId>-->
+        <!--<version>2.0.0</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>com.sun.media</groupId>-->
+        <!--<artifactId>jai_imageio</artifactId>-->
+        <!--<version>1.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+        <!--<groupId>net.java.dev.jna</groupId>-->
+        <!--<artifactId>jna</artifactId>-->
+        <!--<version>4.1.0</version>-->
+        <!--</dependency>-->
 
 
-  </dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.2</version>
+        </dependency>
 
 
-  <properties>
-    <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
-  </properties>
-
-  <build>
-    <plugins>
-
-      <!-- Maven shade plugin -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>2.3</version>
-        <configuration>
-          <filters>
-            <filter>
-              <artifact>*:*</artifact>
-              <excludes>
-                <exclude>META-INF/*.SF</exclude>
-                <exclude>META-INF/*.DSA</exclude>
-                <exclude>META-INF/*.RSA</exclude>
-              </excludes>
-            </filter>
-          </filters>
-        </configuration>
-        <executions>
-          <!-- Run shade goal on package phase -->
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-
-      <!-- Maven compiler plugin -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven-compiler-plugin.version}</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-
-    </plugins>
+    </dependencies>
 
 
-  </build>
+    <properties>
+        <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
+    </properties>
+
+    <build>
+        <plugins>
+
+            <!-- Maven shade plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/*.SF</exclude>
+                                <exclude>META-INF/*.DSA</exclude>
+                                <exclude>META-INF/*.RSA</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
+                </configuration>
+                <executions>
+                    <!-- Run shade goal on package phase -->
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <!-- Maven compiler plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
+
+    </build>
 
 
 </project>
