--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,16 @@
     <name>ljp</name>
     <url>http://maven.apache.org</url>
 
-    <dependencies>
+    <repositories>
+        <repository>
+            <id>repository.jboss.org-public</id>
+            <name>JBoss.org Maven repository</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public</url>
+        </repository>
+    </repositories>
 
+
+    <dependencies>
         <!-- Javax - JMS for using in-conjunction with ActiveMQ -->
         <dependency>
             <groupId>javax.jms</groupId>
@@ -30,9 +38,9 @@
             <version>1.1.1</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>com.inmobi.pso</groupId>-->
-            <!--<artifactId>PSOCommons</artifactId>-->
-            <!--<version>2.29</version>-->
+        <!--<groupId>com.inmobi.pso</groupId>-->
+        <!--<artifactId>PSOCommons</artifactId>-->
+        <!--<version>2.29</version>-->
         <!--</dependency>-->
 
         <dependency>
